# AtlasCar2PanoramicDetection

./: README.md
Atlas_Code_Tests/panoramic_segmentation/: CMakeLists.txt  package.xml
Atlas_Code_Tests/panoramic_segmentation/launch/: cameras.launch  panorama.launch  run.launch
Atlas_Code_Tests/panoramic_segmentation/src/: node_segnet.cpp  panorama-image.py  panorama.py
Dataset_Aveiro_Code/: Evaluate.ipynb  Visualization.ipynb  export-2020-07-01T13_25_05.648Z.json  export.py
Panoramic-Image-Cpp/: README.md
Panoramic-Image-Cpp/launch/: camera_panoramic.launch
Panoramic-Image-Cpp/src/: panoramic_node.cpp
Panoramic-Image-Python/: README.md
Panoramic-Image-Python/launch/: bringup.launch  cameras.launch  panorama.launch
Panoramic-Image-Python/src/: panorama.py
Panoramic_Images_Code/Panoramic-Image-Cpp/: CMakeLists.txt  package.xml
Panoramic_Images_Code/Panoramic-Image-Python/: CMakeLists.txt  package.xml
Segmentation_Code/Jupyter_Segmentation/: PanoSegmentation_Polygons.ipynb  README.md
Segmentation_Code/Jupyter_Segmentation/Some models/: enet_bdd_compiled.pth
Segmentation_Code/Jupyter_Segmentation/panoramic/: Pano.py  Panotest.py
